<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileSettingsActivity">

    <Button
        android:id="@+id/profileHomeBtn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:backgroundTint="@color/Iowa_State_Red"
        android:text="@string/home"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/passwordView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="35dp"
        android:text="@string/password_text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailView" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/Iowa_State_Red"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_max="320dp" />

    <Button
        android:id="@+id/editEmailBtn"
        android:layout_width="76dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="195dp"
        android:backgroundTint="@color/Iowa_State_Red"
        android:text="@string/edit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/emailView"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/editPassBtn"
        android:layout_width="76dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/Iowa_State_Red"
        android:text="@string/edit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/passwordView"
        app:layout_constraintTop_toBottomOf="@+id/editEmailBtn" />

    <TextView
        android:id="@+id/emailView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="205dp"
        android:text="@string/email_text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/profile_picture"
        app:layout_constraintBottom_toTopOf="@+id/emailView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>